--- a/pom.xml
+++ b/pom.xml
@@ -1,34 +1,55 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.codingame.game</groupId>
-	<artifactId>fencing</artifactId>
-	<version>1.0-SNAPSHOT</version>
+    <groupId>com.codingame.game</groupId>
+    <artifactId>fencing</artifactId>
+    <version>1.0-SNAPSHOT</version>
 
-	<properties>
-		<gamengine.version>3.4.2</gamengine.version>
-		<maven.compiler.source>1.8</maven.compiler.source>
-		<maven.compiler.target>1.8</maven.compiler.target>
-	</properties>
+    <properties>
+        <gamengine.version>3.4.2</gamengine.version>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <junit.version>5.5.2</junit.version>
+    </properties>
 
-	<dependencies>
-		<dependency>
-			<groupId>com.codingame.gameengine</groupId>
-			<artifactId>core</artifactId>
-			<version>${gamengine.version}</version>
-		</dependency>
+    <dependencies>
+        <dependency>
+            <groupId>com.codingame.gameengine</groupId>
+            <artifactId>core</artifactId>
+            <version>${gamengine.version}</version>
+        </dependency>
 
-		<dependency>
-			<groupId>com.codingame.gameengine</groupId>
-			<artifactId>module-entities</artifactId>
-			<version>${gamengine.version}</version>
-		</dependency>
+        <dependency>
+            <groupId>com.codingame.gameengine</groupId>
+            <artifactId>module-entities</artifactId>
+            <version>${gamengine.version}</version>
+        </dependency>
 
-		<dependency>
-			<groupId>com.codingame.gameengine</groupId>
-			<artifactId>runner</artifactId>
-			<version>${gamengine.version}</version>
-		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>com.codingame.gameengine</groupId>
+            <artifactId>runner</artifactId>
+            <version>${gamengine.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-params</artifactId>
+            <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.junit-pioneer</groupId>
+            <artifactId>junit-pioneer</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+    </dependencies>
 </project>
