--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,11 @@
             <artifactId>core</artifactId>
             <version>${gamengine.version}</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.codingame.gameengine</groupId>
+            <artifactId>module-tooltip</artifactId>
+            <version>3.4.1</version>
+        </dependency>
         <dependency>
             <groupId>com.codingame.gameengine</groupId>
             <artifactId>module-entities</artifactId>
